[package]
name = "cli"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

clap = "3.2.8"
hyper = { version = "0.14.19", features = [ "stream" ] }
hyperlocal = "0.8.0"
serde = "1.0.137"
serde_json = "1.0.82"
tokio = { version = "1.16.1", features = [ "full" ] }
