[package]
name = "cli"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

clap = "3.2.17"
hyper = { version = "0.14.20", features = [ "stream" ] }
hyperlocal = "0.8.0"
serde = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1.16.1", features = [ "full" ] }
