[package]
name = "cli"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

clap = "3.2.22"
hyper = { version = "0.14.23", features = [ "stream" ] }
hyperlocal = "0.8.0"
serde = "1.0.149"
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = [ "full" ] }
