[package]
name = "daemon"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

async-recursion = "1.0.0"
async-trait = "0.1.52"
flate2 = "1.0.22"
dbus-tokio = "0.7.5"
dbus = "0.9.5"
haikunator = "0.1.2"
hex = "0.4.3"
hmac-sha256 = "1.1.2"
log = "0.4.16"
nix = "0.23.1"
pretty_env_logger = "0.4.0"
rlimit = "0.7.0"
reqwest = "0.11.10"
serde_json = "1.0.79"
tar = "0.4.38"
tokio = { version = "1.16.1", features = [ "full" ] }
tokio-stream = { version = "0.1.8", features = [ "net" ] }
tokio-util = { version = "0.7", features = ["io"] }
warp = "0.3.2"
yaml-rust = "0.4.5"
