[package]
name = "libsquish"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"
toml = "0.5.8"
