[package]
name = "pid1"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

clap = "3.1.10"
futures = "0.3.21"
nix = "0.24.0"
reqwest = "0.11.10"
rlimit = "0.8.3"
tokio = { version = "1.16.1", features = [ "full" ] }
