[package]
name = "pid1"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

clap = "4.0.30"
futures = "0.3.25"
nix = "0.26.1"
reqwest = "0.11.13"
rlimit = "0.8.3"
tokio = { version = "1.22.0", features = [ "full" ] }
