[package]
name = "registry"
version = "0.1.0"
authors = ["amy null <null@amy.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsquish = { path = "../libsquish" }

log = "0.4.14"
pretty_env_logger = "0.4.0"
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = [ "full" ] }
warp = "0.3.1"